few top nav alignment issue is fixed

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -1,5 +1,5 @@
 .side-nav {
-    background: #263238;
+    background: #01011D;
     transition: all .5s ease;
     position: fixed;
     z-index: 2;
@@ -21,14 +21,14 @@
         min-width: 3rem;
         border-radius: 0.313rem;
         padding: 0.313rem;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 900;
         cursor: pointer;
         border: none;
     }
     .logo-text {
         margin-left: 1.5rem;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 700;
         color: #fff;
     }
