--- a/src/app/top-navigation/top-navigation.component.scss
+++ b/src/app/top-navigation/top-navigation.component.scss
@@ -1,5 +1,7 @@
+@import '../../../src/variables.scss';
+
 .navbar {
-    background-color: #263238;
+    background-color: $background-menu;
     height: 60px;
     padding: 5px 20px;
     z-index: 1;
@@ -12,4 +14,10 @@
 
 .navbar-brand {
     display: inline-block;
+}
+.about-list {
+    display: flex;
+    li {
+        padding: 5px 15px;
+    }
 }
