--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "tailwind components";
 @import "tailwind utilities"; */
 
+@import './variables';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"');
 
@@ -14,9 +15,18 @@
 
 :root {
     --text-color: red;
+    --text-white: #ffffff;
+    --text-black: #000000;
     --text-size: 5rem;
-    --primary-color: #02a02a;
+    --primary-color: #272727;
     --secondary-color: #000;
+    --menu-background: #01011D;
+
+    --content-light: #9999A5;
+    --content-light-dark: #fff
+    //color: #84A98C;
+    //color: #272727;
+    //color: #CAD2C5;
   }
 
 * {
